Remove database requirement - project uses in-memory storage

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
 # Environment Variables Template
-# Copy this to .env and fill in your actual values
+# This project doesn't require any environment variables for normal operation
+# All variables below are OPTIONAL
 
-# Database Connection
-DATABASE_URL=your_postgresql_connection_string_here
+# Port (Vercel/production will set this automatically)
+# Only needed if you want to run on a different port locally
+# PORT=5000
 
-# Port (Vercel will set this automatically in production)
-PORT=5000
+# Database (NOT REQUIRED - project uses in-memory storage)
+# Only uncomment if you plan to migrate to a real database in the future
+# DATABASE_URL=your_postgresql_connection_string_here
